Auth Services added

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL = "mongodb+srv://admin:Santos600.@checkyourprogressapp.oor9sxp.mongodb.net/?retryWrites=true&w=majority"
 PORT = 3000
+JWT_SECRET = "secretKey"
