--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL = "mongodb+srv://admin:Santos600.@checkyourprogressapp.oor9sxp.mongodb.net/?retryWrites=true&w=majority"
 PORT = 3000
 JWT_SECRET = "secretKey"
+MAIL_USER="checkyourprogress0@gmail.com"
+MAIL_PASSWORD="3f9Ma#P#6$&N@EaY"
