ADD:   - change the name of the app   - add new property exerciseType

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "check-your-progress-app-be",
+  "name": "gym-pro-goals-be",
   "version": "0.0.1",
   "description": "",
   "author": "",
